--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -1,53 +1,455 @@
+.about-section-wrapper {
+  position: relative;
+  display: grid;
+  width: 100%;
+  height: var(--about-us-content);
+  z-index: 3;
+  margin: 0 auto;
+  margin-top: -4rem;
+  max-height: 500px;
+}
+@media (min-height: 947px) and (width < 1500px) {
+  .noise {
+    max-height: 550px !important;
+  }
+  .logo-section h1 {
+    font-size: clamp(1.3em, 1.5vw, 1vw) !important;
+  }
+}
+@media (min-height: 947px) and (width < 594px) {
+  .noise {
+    max-height: 550px !important;
+  }
+  .logo-section h1 {
+    font-size: 1.15rem !important;
+  }
+}
+@media (min-height: 947px) and (max-width: 452px) {
+  .noise {
+    max-height: 550px !important;
+  }
+  .logo-section h1 {
+    font-size: 1.15rem !important;
+  }
+}
+.noise {
+  background: url("../../../public/assets/video/NnTN1hX0.gif");
+  position: relative;
+  z-index: 9999;
+  /* width: min(95%, 85em); */
+  width: 70vw;
+  height: clamp(350px, 60svh, 70svh);
+  margin: 0 auto;
+  max-height: 450px;
+  margin-top: -4rem;
+  border-radius: 15px;
+}
+.about-section-grid {
+  position: relative;
+  display: grid;
+  grid-template-rows: 0.3fr 1fr;
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  background: radial-gradient(
+    circle at center,
+    var(--color-two-animated-bg),
+    var(--color-one-animated-bg)
+  ); /* Brown color */
+  animation: gradient 10s ease infinite;
+  background-size: 200% 200%;
+  z-index: 3;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
 .about-section {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  bottom: 2rem;
+}
+
+.about-us-text {
+  position: absolute;
+  bottom: -4.5rem;
+  display: flex;
+  justify-self: center;
+
+  padding: 1rem 2rem;
+  border-radius: 2em;
+  background: whitesmoke;
+  color: var(--color-green);
+  font-family: var(--secondary-font-family);
+  font-size: 2rem;
+  font-weight: 100;
+}
+
+.right-about-us-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: first baseline;
+  color: var(--text-color-one);
+  gap: 2rem;
+}
+.right-about-us-section h2 {
+  font-size: 1.5rem;
+}
+.right-about-us-section h1 {
+  font-size: clamp(2rem, 2vw, 2vw);
+  text-transform: uppercase;
+  font-weight: 900;
+  font-family: var(--main-font-family);
+}
+.right-about-us-section P {
+  font-size: clamp(1.2rem, 1vw, 1vw);
+  line-height: 1.7;
+  width: 90%;
+}
+.right-about-us-section ul p:nth-child(2) {
+  margin-top: 1rem;
+}
+
+.right-about-us-section button {
+  position: relative;
+  padding: 1rem 2rem;
+  background: rgba(236, 235, 226, 0.879);
+  font-size: clamp(1rem, 0.8vw, 0.8vw);
+  color: #171717;
+  font-weight: bolder;
+  outline: none;
+  border-radius: 1em;
+
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border: none;
+  font-family: var(--main-font-family);
+  border: 2px solid #171717;
+  cursor: pointer;
+}
+.noise-btn-wrapper {
+  background: url("../../../public/assets/images/grainbg.jpg");
+  position: relative;
+  border-radius: 2em;
+}
+
+.left-about-us-section {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left-about-us-section .img {
+  background: url("../../../public/assets/images/aboutUsPhotoGarkalni.jpg")
+    center;
+
+  position: relative;
+  z-index: 999;
+  width: 80%;
+  height: 70%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  border-radius: 1em;
+}
+.btn-more-info {
+  position: relative;
+  border-radius: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 2rem;
+  color: var(--text-color-one);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  overflow: hidden; /* Ensure overflow is hidden */
+  cursor: pointer;
+  top: 1rem;
+}
+.btn-more-info h1 {
+  font-size: 1rem;
+  font-family: var(--main-font-family);
+  color: var(--text-color-one);
+
+}
+
+.btn-more-info::before {
+  position: absolute;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-radius: 50%;
+  background: black;
+  transition: all 0.7s ease-in-out;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.btn-more-info:hover::before {
+  position: absolute;
+  width: 600%;
+  height: 500px;
+
+  transition: all 0.7s ease-in-out;
+}
+.left-section__about_us {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left-section_about_us_padding {
+  position: relative;
+  width: 100%;
+  height: 90%;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 60px 40px;
+  align-items: center;
+}
+.founded-title {
+  font-size: 15px;
+  color: #31572c;
+  letter-spacing: 2px;
+}
+.about-us__title {
+  font-size: 47px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-family: var(--main-font-family);
+}
+.about-us__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.75em;
+  color: var(--text-color-second);
+
+}
+
+.about-list li {
+  list-style: none;
+  line-height: 50px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.right-section__about_us {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.logo-section {
+  display: flex;
+  overflow: visible; /* Allow content overflow */
+  flex-direction: row;
+  justify-content: center;
+  gap: 0.5rem;
+  align-items: center;
+  color: rgb(255, 255, 255);
+  z-index: 999;
+  height: 100%;
+  width: 100%;
+}
+.logo-section h1 {
+  font-size: clamp(1.1em, 1.5vw, 1vw);
+
+  font-weight: 200;
+  line-height: 1.4;
+  display: flex;
+  justify-self: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 1rem 2rem;
+}
+
+.logo-section h1:first-child {
+  border-left: none;
+}
+
+.logo-section h1:not(:first-child) {
+  border-left: 1px solid rgba(255, 255, 255, 0.675);
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  25% {
+    background-position: 100% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  75% {
+    background-position: 0% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+@media (min-height: 947px) and (max-width: 986px) {
+  .about-section-wrapper {
+    position: relative;
+    width: 95%;
+    max-height: 600px !important;
+  }
+  .noise {
+    min-height: 600px !important;
+  }
+}
+
+@media (max-width: 986px) {
+  .noise {
+    background: url("../../../public/assets/video/NnTN1hX0.gif");
+    position: relative;
+    z-index: 9999;
+    /* width: min(95%, 85em); */
+    width: min(85%, 70em);
+    height: clamp(500px, 70svh, 70svh);
+    max-height: 650px;
+
+    margin: 0 auto;
+    margin-top: -4rem;
+    border-radius: 15px;
+  }
+  .about-section-wrapper {
+    max-height: unset;
+  }
+  .about-section-grid {
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.25fr 1fr;
     width: 100%;
-    height: 80vh;
-    background: #f5f5f5;
+    height: 100%;
+
+    border-radius: 15px;
+
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
     z-index: 3;
+    margin: 0 auto;
   }
-.left-section__about_us{
+  .about-section {
     position: relative;
-    width: 100%;
-    height: 100%;
+    display: grid;
+    grid-template-columns: unset;
+    grid-template-rows: 1fr 1fr;
+    bottom: 0rem;
+  }
+  .about-us-text {
+    position: absolute;
+    margin-bottom: 1rem;
     display: flex;
-   justify-content: center;
-   align-items: center;
-   padding: 30px 0;
-}
-.left-section_about_us_padding{
+    justify-self: center;
+    padding: 1rem 2rem;
+    border-radius: 2em;
+    background: whitesmoke;
+  }
+
+  .left-about-us-section .img {
     position: relative;
-    width: 70%;
+    z-index: 999;
+    width: 90%;
     height: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .right-about-us-section {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-
-}
-.founded-title{
-    font-size: 15px;
-    font-family: "Founders Grotesk Bold",sans-serif;
-    color: #31572c;
-
-}
-.about-us__title{
-    font-family: "Founders Grotesk Bold",sans-serif;
-    font-size: 37px;
-}
-.about-us__text{
-    font-size: 14px;
-    font-weight: 300;
-line-height: 1.75em;
-
-}
-
-
-  @media screen and (max-width: 768px) {
-    .about-section {
-      grid-template-columns: 1fr; /* Single column layout for smaller screens */
-    }
-    
-    /* Adjust other styles as needed for smaller screens */
+    justify-content: center;
+    align-items: first baseline;
+    color: var(--text-color-one);
+    width: 90%;
+    margin-inline: auto;
+    gap: 1.5rem;
   }
+  .logo-section {
+    height: 100%;
+    width: 100%;
+    padding: unset;
+  }
+  .logo-section h1 {
+    padding: 1rem 2rem;
+    position: relative;
+    bottom: 0rem;
+    height: 3rem;
+  }
+}
+@media (min-height: 947px) and (width < 1500px) {
+  .about-section-wrapper {
+    position: relative;
+    width: 95%;
+    max-height: 600px !important;
+  }
+  .noise {
+    max-height: 450px !important;
+    width: min(85%, 95em);
+  }
+  .right-about-us-section P {
+    font-size: clamp(1.5rem, 1vw, 1vw) !important;
+    line-height: 1.5;
+    width: 90%;
+  }
+}
+@media (max-width: 660px) {
+  .noise {
+    margin-top: -2rem;
+    width: min(90%, 70em);
+  }
+}
+@media (max-width: 392px) {
+  .text-column-services h1 {
+    font-size: clamp(2.6em, 6vw, 6vw);
+  }
+}
+@media (max-width: 452px) {
+  .logo-section h1 {
+    font-size: clamp(1rem, 2vw, 2vw);
+    padding: 1rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 376px) {
+  .logo-section h1 {
+    font-size: clamp(1rem, 2.2vw, 2.2vw);
+    padding: 0.5rem 1.5rem;
+    font-weight: 400;
+  }
+  .logo-section {
+    height: 90%;
+  }
+}
+@media (width > 1400px) {
+  .noise {
+    background: url("../../../public/assets/video/NnTN1hX0.gif");
+    position: relative;
+    z-index: 9999;
+    /* width: min(95%, 85em); */
+    width: 70vw;
+    height: clamp(400px, 60svh, 70svh);
+    margin: 0 auto;
+    margin-top: -6rem;
+    max-height: unset;
+  }
+  .about-section-wrapper {
+    max-height: unset;
+  }
+}
