--- a/src/components/Gallery/GallerySection.css
+++ b/src/components/Gallery/GallerySection.css
@@ -1,75 +1,278 @@
-
-.gallery-section-layout{
-    width: 100%;
-    height: auto;
-    background: #F5F5F5;
-    position: relative;
-
+.gallery-section-layout {
+  width: 100%;
+  height: 100%;
+  background: #f5f5f5;
+  position: relative;
+  top: 5rem;
 }
 
-
-
-.gallery-section-title::after{
-    position: absolute;
-    content: " ";
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: #171717ec;
-
+.gallery-section-title::after {
+  position: absolute;
+  content: " ";
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #171717ec;
+  border-radius: 2em;
+}
+.all-gallery-main-content{
+  position: relative;
+  width: 100%;
+  padding-bottom: 10rem;
+  margin-bottom: 400px;
+  background: var(--text-color-second);
+  border-bottom-left-radius: 5em;
+  border-bottom-right-radius: 5em;
+  z-index: 2;
 }
 
-img{
-    position: relative;
-    width: 300px;
-    height: 300px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    border-radius: 15px;
-  
+.services_content {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-inline: auto;
+  background: var(--text-color-second);
+  border-bottom-left-radius: 5em;
+  border-bottom-right-radius: 5em;
+}
+
+.back-home-icon {
+  font-size: 1.7rem;
+}
+.all-gallery-main-content::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  content: " ";
+  background: linear-gradient(to top, #171717, transparent);
+  z-index: 1;
+  border-bottom-left-radius: 5em;
+  border-bottom-right-radius: 5em;
+}
+.top-picture {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 80vh;
+  width: 100%;
+  background: url("../../../public/assets/garkalni-gallery/piknikavieta_1.jpeg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.all-top-section .services_title {
+  color: var( --text-color-one);
+  z-index: 999;
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  gap: 1rem;
+  position: relative;
+  font-family: var(--main-font-family);
+  top: 70px;
+  font-size: clamp(2rem, 1.4vw, 1.4vw);
+  white-space: nowrap;
+}
+
+.top-picture::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 90vh;
+  content: " ";
+  background: linear-gradient(to top, #171717, transparent);
+}
+
+.all-services-main-content::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  content: " ";
+  background: linear-gradient(to top, #171717, transparent);
+  z-index: 1;
+  border-bottom-left-radius: 5em;
+  border-bottom-right-radius: 5em;
+}
+
+@media (max-width: 708px) {
+  .all-top-section h1 {
+    font-size: 1.8rem !important;
+  }
+}
+
+.all-top-section h1 span {
+  width: 100% !important;
+}
+
+.all-main-section {
+  position: relative;
+  margin-inline: auto;
+  display: flex;
+  width: 80%;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5rem;
+  margin-top: 320px;
+  padding: 2rem;
+  background: url("../../../public/assets/images/grainbg.jpg");
+  padding-bottom: 10rem;
+  border-radius: 5em;
+  z-index: 12;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.all-main-section::after {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: " ";
+  background: #e8e1dae2;
+  border-radius: 5em;
+  z-index: 11;
+}
+
+.all-items {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  width: 100%;
+  height: 60vh;
+  object-fit: cover;
+  border-radius: 1.2em;
+}
+
+.service-info_img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.service-info_top-content {
+  width: 60vw;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.service-info_top-content h1 {
+  font-family: var(--main-font-family);
+  font-size: clamp(2rem, 1.4vw, 1.4vw);
+}
+
+.service-info_top-content p {
+  font-family: var(--secondary-font-family);
+  font-size: clamp(1.35rem, 0.9vw, 0.9vw);
+  margin-top: 2rem;
+  line-height: 1.8;
+}
+
+.logo-bgone1 {
+  position: absolute;
+  background: url("../../../public/assets/images/logo.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  width: 16rem;
+  height: 12rem;
+  top: 2rem;
+  right: 0rem;
+  z-index: 9999;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media (width > 1400px) {
+  .all-gallery-main-content{
+    margin-bottom: 50rem;
+  }
+}
+img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  object-fit: cover;
+  border-radius: 15px;
 }
 
 .image-container {
-    position: relative;
-    width: 300px;
-    height: 300px;
-    border-radius: 15px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-    transition: all .3s ease-in-out;
-
-    cursor: pointer;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  border-radius: 2em;
+  z-index: 999;
+}
+.image-section {
+  position: relative;
+  margin-top: 5rem;
+  width: 100%;
+  height: auto; /* Adjust item height as needed */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .image-container:hover::after {
-    transition: all .3s ease-in-out;
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: #31572c84;
-    border-radius: 15px;
-    pointer-events: none; /* Allow clicks to pass through to the image */
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: #31572c84;
+  pointer-events: none; /* Allow clicks to pass through to the image */
+  border-radius: 2em;
 }
-.gallery-section__images{
-    position: relative;
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    gap:10px;
+.gallery-section__images {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  gap: 10px;
 }
 /* .play-btn{
     z-index: 100;
@@ -78,27 +281,29 @@ img{
     margin-left: 30px;
     cursor: pointer;
 } */
-.gallery-section-title{
-    padding: 20px 0px;
-    position: relative;
-    width: 100%;
-    height: 60vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-      background: url('../../../public/assets/images/backround.png') no-repeat center center fixed; 
-
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-     -o-background-size: cover;
-     background-size: cover;
+.gallery-section-title {
+  padding: 20px 0px;
+  position: relative;
+  width: 80%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: url("../../../public/assets/images/backround.png") no-repeat
+    center center fixed;
+  margin: 0 auto;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  border-radius: 2em;
 }
-.gallery-section-title h1{
-    color: white;
-    font-size: 60px;
-    z-index: 14;
-    font-family: "Founders Grotesk Bold",sans-serif;
+.gallery-section-title h1 {
+  color: var( --text-color-one);
+  font-size: 60px;
+  z-index: 14;
+  font-family: "Founders Grotesk Bold", sans-serif;
 }
 
 /* 
@@ -110,36 +315,188 @@ img{
     font-size: 20px;
     z-index: 999;
 } */
-.select-gallery__type{
-    position: relative;
-    z-index: 55;
-    width: 80%;
-    text-align: center;
-    line-height: 40px;
-   
+.select-gallery__type {
+  position: relative;
+  z-index: 55;
+  width: 100%;
+  text-align: center;
+  line-height: 40px;
 }
-.select-gallery__type button{
-    margin-left: 10px;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 15px;
-    background: none;
-    color: whitesmoke;
-    font-size: 12px;
-    cursor: pointer;
-    transition: all .3s ease-in-out;
-    z-index: -1;
 
+.select-gallery__type button {
+  margin-left: 10px;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 15px;
+  background: none;
+  color: whitesmoke;
+  font-size: 12px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  z-index: -1;
 }
-.select-gallery__type button.active{
-    background: whitesmoke;
-    color: #171717;
+.select-gallery__type button.active {
+  background: whitesmoke;
+  color: #171717;
 }
-.select-gallery__type button:hover{
-   background: rgba(245, 245, 245, 0.09);
-   transition: all .3s ease-in-out;
+.select-gallery__type button:hover {
+  background: rgba(245, 245, 245, 0.09);
+  transition: all 0.3s ease-in-out;
 }
-.select-gallery__type button.active:hover{
-    background: whitesmoke;
-    color: #171717;
+.select-gallery__type button.active:hover {
+  background: whitesmoke;
+  color: #171717;
+}
+.all-gallery-main-content .all-top-section {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-inline: auto;
+  top: 199px !important;
+  left: 0rem;
+
+  position: relative;
+}
+.all-top-section .gallery_title {
+  position: relative;
+  font-size: 4rem !important ;
+  font-family: var(--main-font-family);
+  width: 90%;
+  color: rgba(251, 250, 248, 0.9);
+  z-index: 999000;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-inline: right;
+  bottom: 1rem;
+  background-clip: text;
+  background-size: cover;
+  -webkit-background-clip: text;
+  white-space: nowrap; /* Ensures the text remains on one line */
+  background-image: url(../../../public/assets/images/grainbg.jpg);
+}
+
+.all-main-section .service-details {
+  position: relative;
+  margin-top: 4rem;
+
+  height: auto; /* Adjust item height as needed */
+  display: grid;
+  grid-template-rows: auto 1fr;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  width: 60vw; /* Adjusted width */
+  z-index: 999;
+}
+
+@media (max-width: 847px) {
+  .all-main-section {
+    width: 100%;
+  }
+  .image-container {
+    width: 330px;
+  
+  }
+}
+
+.select_gallery__type_two {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  min-width: 20rem;
+  color: var( --text-color-one);
+  z-index: 9999;
+  margin-top: 1rem;
+}
+.select_gallery__type_two h1 {
+  font-size: clamp(1rem, 2vw, 2vw);
+  color: var( --text-color-one);
+  font-weight: 100 !important;
+}
+
+#arrow {
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+
+.menu-nav {
+  position: fixed;
+  top: 3rem;
+  right: 3rem;
+  background: radial-gradient(
+    circle at center,
+    var(--color-two-animated-bg),
+    var(--color-one-animated-bg)
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  font-size: 1.2rem;
+  border-radius: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem 2rem;
+  cursor: pointer;
+  color: var(--text-color-one);
+  overflow: hidden;
+  gap: 1rem;
+  z-index: 999999;
+  font-family: var(--main-font-family);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.menu_p {
+  height: 2rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.positive-p {
+  transition: all 0.3s ease-in-out;
+  font-family: var(--main-font-family);
+}
+.back-home-icon {
+  font-size: 1.7rem;
+}
+.negativi-p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: var(--text-color-one);
+  border: none;
+  transition: all 0.3s ease-in-out;
+  transform: translateY(100%);
+  display: flex;
+  align-items: center;
+  font-family: var(--main-font-family);
+}
+.menu-nav::after {
+  background: url(http://localhost:3000/static/media/NnTN1hX0.04c6fd19c10870d70fef.gif);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  content: " ";
+  border-radius: 1em;
+  opacity: 0.05;
+  z-index: 1;
+}
+.menu-nav:hover .positive-p {
+  transform: translateY(-110%);
+  transition: all 0.2s ease-in-out;
+}
+
+.menu-nav:hover .negativi-p {
+  transform: translateY(0%);
+  transition: all 0.2s ease-in-out;
 }
