--- a/src/components/GiftCards/GiftCards.css
+++ b/src/components/GiftCards/GiftCards.css
@@ -1,49 +1,86 @@
-.gift-cards-section{
-    position: relative;
-    width: 100%;
-    height: 60vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    background: #F5F5F5;
-    border-top: .1px solid rgb(208, 208, 208);
-    z-index: 3;
+.gift-cards-section {
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  z-index: 3;
+  border-radius: 0 0 5% 5%;
 }
-.gift-cards-section::after{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    content: " ";
-    top: 0;
-    left: 0;
-    opacity: .06;
-    background: url('../../../public/assets/images/backround.png');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    z-index: 3;
+.gift-card-top-section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url("../../../public/assets/images/backround.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logo3 {
+  background: url("../../../public/assets/images/logo2.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 15rem;
+  height: 15rem;
+  position: absolute;
+  bottom: 5rem;
+  right: 5rem;
+}
+.gift-card-top-section::after {
+  position: absolute;
+  content: " ";
+  background: linear-gradient(200deg, #31572cc8 20%, transparent);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.gift-card-top-section h1 {
+  font-family: "Unbounded", sans-serif;
+  color: var(--text-color-one);
+  font-size: 4.5rem;
+  position: relative;
+  bottom: 1rem;
+  z-index: 2;
+}
+.gift-card-photo-section {
+  position: absolute;
+  width: 40%;
+  height: 120%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  background: var( --text-color-one);; 
 
+  border-radius: 15px;
 }
-.gift-card-photo-section{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10;
+.gift-card-photo {
+  position: absolute;
+  width: 45rem;
+  height: 120%;
+  background: url("../../../public/assets/images/gift-card-original.jpeg")
+    no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100% 100%;
+  background-position: center;
 
-}
-.gift-card-photo{
-    position: relative;
-    width: 70%;
-    height: 70%;
-    background: url('../../../public/assets/images/gift-card-original.jpeg') no-repeat; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    z-index: 10;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  z-index: 10;
+  border-radius: 15px;
+  bottom: -2rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 /* .gift-card-photo::after{
     content: " ";
@@ -55,59 +92,68 @@
     background: #1717174b;
 } */
 
-.gift-card-description{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-left: 70px;
-    z-index: 10;
-
-
-}
-
-.gift-card-description h1{
-    font-family: "Founders Grotesk Bold",sans-serif;
-    text-transform: uppercase;
-    color: #171717;
-    font-size: 40px;
-    line-height: 80px; 
-       z-index: 10;
-
-}
-.gift-card-description h1 span{
+.gift-card-description {
   position: relative;
-  font-family: "Founders Grotesk Bold",sans-serif;
+  width: 40%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  background: whitesmoke;
+  border-radius: 15px;
+  bottom: 5rem;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+.gift-card-description p {
+  color: var( --text-color-second);
+  font-size: 1.3rem;
+  z-index: 10;
+  line-height: 22px;
+  text-align: center;
+}
+.second-column {
+  position: relative;
+  padding: 1rem;
+}
+.gift-card-bottom-section {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background: var( --text-color-second);
+}
+
+.gift-card-description h1 {
+  font-family: var(--main-font-family);
+  text-transform: uppercase;
+  color: var( --text-color-second);
+  font-size: 3rem;
+  line-height: 80px;
+  z-index: 10;
+}
+.gift-card-description h1 span {
+  position: relative;
+  font-family: var(--main-font-family);
   text-transform: uppercase;
   color: #171717;
-  font-size: 40px;
-
+  font-size: 3rem;
 }
 .gift-card-description h1 span::after {
-    position: absolute;
-    content: " ";
-    width: 100%;
-    height: 10px;
-    background-image: url("https://www.beyondcss.dev/underline.svg");
-    background-position: center;
-    bottom: 0;
-    left: 0;
-    
-    /* Change the color of the background image using hue-rotate */
-    filter: hue-rotate(120deg); /* Adjust the degree value as needed */
-}
-.gift-card-description p{
-    width: 90%;
-    color: #171717;
-    font-size: 14px;
-    text-align: center;
-    z-index: 10;
-    line-height: 22px;
+  position: absolute;
+  content: " ";
+  width: 100%;
+  height: 10px;
+  background-image: url("https://www.beyondcss.dev/underline.svg");
+  background-position: center;
+  bottom: 0;
+  left: 0;
 
+  /* Change the color of the background image using hue-rotate */
+  filter: hue-rotate(120deg); /* Adjust the degree value as needed */
 }
+
 /* 
 .gift-cards-section h5{
     width: 70%;
@@ -124,3 +170,76 @@
   margin-left: 120px;
 
 } */
+
+@media (max-width: 42.8125em) {
+  .gift-card-description {
+    position: relative;
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    padding: 0;
+    margin: 0;
+    z-index: 999;
+  }
+  .gift-cards-section {
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    background: #f5f5f5;
+    border-top: 0.1px solid rgb(208, 208, 208);
+    z-index: 3;
+  }
+  .gift-card-description h1 {
+    font-family: var(--secondary-font-family);
+    text-transform: uppercase;
+    color: var( --text-color-second);
+    font-size: 30px;
+    line-height: 80px;
+    z-index: 10;
+  }
+  .gift-card-description h1 span {
+    position: relative;
+    font-family: var(--secondary-font-family);
+    text-transform: uppercase;
+    color: var( --text-color-second);
+    font-size: 30px;
+  }
+  .gift-card-photo-section {
+    display: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+  }
+  .gift-card-photo {
+    position: relative;
+
+    /* margin-top: 100px; */
+    background: url("../../../public/assets/images/gift-card-original.jpeg")
+      no-repeat;
+    width: 90%;
+    height: 90%;
+    background-size: 100% 100%;
+    z-index: 10;
+    box-shadow: none;
+    display: none;
+  }
+}
+.gift-icon {
+  position: absolute;
+  top: -15%; /* Adjust as needed */
+  margin-inline: aut0;
+  font-size: 6rem;
+  background: #31572c;
+  border-radius: 50%;
+  padding: 1rem;
+  color: var( --text-color-one);;
+  z-index: 99;
+}
