--- a/src/components/Location/Location.css
+++ b/src/components/Location/Location.css
@@ -1,154 +1,432 @@
+.location-content {
+  position: relative;
+  width: 85%;
+  display: grid;
+  grid-template-columns: 0.4fr 1fr;
+  margin-inline: auto;
+  height: 70vh;
+  grid-gap: 2rem;
+}
 
-.location-content{
+.decorbox {
+  width: 100%;
+  height: 30vh;
+  background: radial-gradient(
+    circle at center,
+    var(--color-two-animated-bg),
+    var(--color-one-animated-bg)
+  );
+  /* Brown color */
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  position: relative;
+  border-radius: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 2rem;
+  color: var(--text-color-one);
+  font-family: var(--main-font-family);
+  max-height: 200px;
+  font-size: 2rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.spinning-globe p {
+  position: relative;
+  color: var(--text-color-one);
+  font-size: 1.5rem;
+  left: 3rem;
+}
+
+.spinning-globe {
+  position: absolute;
+  right: 0rem;
+  bottom: 0rem;
+  width: 17rem;
+  height: 5rem;
+  background: var(--color-green);
+  border-top-left-radius: 2.5em;
+  border-bottom-left-radius: 2.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 1rem;
+  z-index: 9999;
+}
+
+.globe-cover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--text-color-one);
+  padding: 0.5rem;
+  border-radius: 50%;
+}
+
+.globe {
+  color: var(--color-green);
+  font-size: 3rem;
+
+  animation: rotateSideToSide 3s linear infinite; /* Adjust duration and timing function as needed */
+}
+
+/* Keyframes for the side-to-side rotation animation */
+@keyframes rotateSideToSide {
+  0%,
+  100% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(180deg); /* Rotate around x-axis */
+  }
+}
+
+.grey-background {
+  background-color: #ccc; /* Adjust the color as needed */
+}
+
+.maps {
+  border-radius: 15px;
+  height: 100%;
+  width: 100%;
+  background-color: #f0f0f0; /* Set your desired background color */
+  display: flex;
+  justify-self: center;
+  position: relative;
+  align-self: center;
+}
+.maps-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+}
+.maps-wrapper-extend .maps {
+  position: absolute;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.maps-left-side {
+  width: 100%;
+  height: 85%;
+  position: relative;
+  border-radius: 2em;
+  padding: 2rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin: auto 0;
+}
+
+.maps-left-side_first-row {
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+  width: 100%; /* Adjusted width */
+}
+
+.maps-left-side_second-row {
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+}
+
+.location-title {
+  font-size: 2rem;
+  font-family: var(--extra-font-family);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  position: relative;
+  width: 100%;
+}
+
+.maps-left-side_first-row h6 {
+  color: rgb(84, 84, 84);
+  top: 1rem;
+  font-weight: 100;
+  gap: 1rem;
+  display: flex;
+  align-items: center;
+  line-height: 1.5;
+}
+
+h6 span {
+  color: var(--color-green);
+  gap: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+}
+
+h6 {
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  line-height: 1.3;
+}
+
+.maps-left-side_second-row h6 {
+  font-family: 300;
+  color: rgb(84, 84, 84);
+  font-weight: 100;
+  display: flex;
+  align-items: center;
+  top: 1rem;
+  gap: 1rem;
+}
+
+.maps-left-side_third-row {
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+}
+
+.maps-left-side_third-row h6 {
+  font-family: 300;
+  color: rgb(84, 84, 84);
+  top: 2rem;
+  font-weight: 100;
+  display: flex;
+  align-self: flex-start;
+  gap: 1rem;
+  position: relative;
+}
+
+.location-section {
+  position: relative;
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+  max-height: 550px;
+  display: grid;
+  grid-template-columns: 0.6fr 1fr;
+  background: var(--text-color-one);
+
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.leaflet-container {
+  background-color: #f0f0f0; /* Set your desired background color */
+}
+
+.leaflet-container {
+  background-color: #f0f0f0 !important;
+}
+
+.location-bottom-content {
+  position: relative;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  transition: all 0.4s ease-in;
+  padding: 1rem 1rem;
+  background: #31572c;
+  border-radius: 15px;
+  gap: 0.5rem;
+}
+
+.location-bottom-content p {
+  color: rgb(220, 220, 220);
+  z-index: 13;
+  font-size: 1rem; /* Changed to viewport width (vw) */
+}
+
+.location-bottom-content h1 {
+  color: var(--text-color-one);
+  z-index: 999;
+  font-family: var(--main-font-family);
+  font-size: 2rem; /* Changed to viewport width (vw) */
+}
+
+.location-icon {
+  color: var(--text-color-one);
+  font-size: 1.6vw; /* Changed to viewport width (vw) */
+}
+
+.triger-location-btn {
+  margin-top: 0.9vw; /* Changed to viewport width (vw) */
+  width: 8vw; /* Changed to viewport width (vw) */
+  padding: 0.8vw 1.2vw; /* Changed to viewport width (vw) */
+  border-radius: 2.5vw; /* Changed to viewport width (vw) */
+  color: var(--text-color-one);
+  font-size: 1.2vw; /* Changed to viewport width (vw) */
+  z-index: 999;
+  transition: all 0.3s ease-in-out;
+  background: rgba(255, 255, 255, 0.06);
+  box-shadow: 0 4px 3vw rgba(0, 0, 0, 0.1); /* Changed to viewport width (vw) */
+  backdrop-filter: blur(0.9vw); /* Changed to viewport width (vw) */
+  -webkit-backdrop-filter: blur(0.9vw); /* Changed to viewport width (vw) */
+  border: 0.1vw solid rgba(255, 255, 255, 0.3); /* Changed to viewport width (vw) */
+  cursor: pointer;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.triger-location-btn span {
+  width: 100%;
+  z-index: 5;
+  position: relative;
+  transition: color 350ms ease;
+  display: flex;
+  gap: 0.1vw;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.triger-location-btn:hover span {
+  color: var(--text-color-one);
+}
+
+.triger-location-btn::after,
+.triger-location-btn::before {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background: #31572c;
+  z-index: -1;
+}
+
+.triger-location-btn::before {
+  transform: translateX(-100%);
+  z-index: 1;
+}
+
+.triger-location-btn:hover:before {
+  transform: translateX(0);
+  transition: transform 350ms ease;
+}
+
+.triger-location-btn::after {
+  z-index: 0;
+  transform: translateX(100%);
+  transition: none;
+  transition: transform 350ms ease;
+}
+
+.triger-location-btn:hover:after {
+  opacity: 1;
+  transform: translateX(0);
+  transition: transform 350ms 360ms ease;
+}
+
+@media (max-width: 1131px) {
+  .location-content {
+    width: 100%; /* Adjusted width */
+  }
+  .maps-left-side_first-row {
+    width: 100%;
+  }
+  .maps-left-side {
+    width: 100%;
+  }
+
+  h6 {
+    font-size: clamp(1.2rem, 1.1vw, 1.1vw);
+    width: 80%;
+  }
+}
+.extend-icon {
+  position: absolute;
+  color: var(--color-green);
+  font-size: 3rem;
+  z-index: 9999;
+  right: 1.2rem;
+  top: 2rem;
+}
+@media (max-width: 717px) {
+  h6 {
+    width: 100%;
+  }
+}
+.extend-icon {
+  position: absolute;
+  color: var(--color-green);
+  font-size: 3rem;
+  z-index: 9999;
+  right: 1.2rem;
+  top: 2rem;
+}
+
+@media (max-width: 890px) {
+  .location-content {
     position: relative;
     width: 100%;
-    height: 40vh;
-    background: url('../../../public/assets/images/backround.png') no-repeat fixed center ; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    /* display: grid;
-    grid-template-columns: 1fr 1fr; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 3;
-
-}
-.location-content::after{
-    width: 100%;
-    height: 100%;
-   position: absolute;
-   content: " ";
-   left: 0;
-   top: 0;
-   background: #171717c3;
-}
-.location-section{
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-}
-.maps{
-    border-radius:15px ;
-
-}
-.location-left-content{
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-.location-left-content p{
-  color: white;
-  z-index: 13;
-  font-size: 12px;
-}
-.location-left-content h1{
-    color: white;
-    z-index: 999;
-    font-family: "Founders Grotesk Bold",sans-serif;
-    font-size: 30px;
-}
-.location-icon{
-    color: white;
-    font-size: 20px;
-}
-
-.custom-popup {
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    grid-template-columns: unset;
+    margin-inline: auto;
+    height: clamp(600px, 70vw, 70vw);
+    grid-gap: unset;
+    gap: 3rem;
   }
-  
-  .popup-title {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .popup-content {
-    font-size: 14px;
-  }
-
-  .triger-location-btn{
-    margin-top: 15px;
-    width: 100px;
-    padding: 10px 15px;
-    border-radius: 15px;
-    color: white;
-    font-size: 15px;
-    z-index: 999;
-  
-    transition: all .3s ease-in-out;
-
-    background: rgba(255, 255, 255, 0.06);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(9px);
-    -webkit-backdrop-filter: blur(9px);
-    border: .1px solid rgba(255, 255, 255, 0.3);
-    cursor: pointer;
-    overflow: hidden;
-  }
-
-  
-
-
-
-
-
-
-
-  .triger-location-btn span {
-    width: 100%;
-    z-index: 5;
+  .decorbox {
+    width: clamp(20rem, 32vw, 32vw);
+    height: clamp(15rem, 25vw, 25vw);
+    background: radial-gradient(
+      circle at center,
+      var(--color-two-animated-bg),
+      var(--color-one-animated-bg)
+    );
+    /* Brown color */
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
     position: relative;
-    transition: color 350ms ease;
+    border-radius: 1em;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 2rem;
+    color: var(--text-color-one);
+    font-family: var(--main-font-family);
+    font-size: 2rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
-  .triger-location-btn:hover span{
-    color: white;
-  }
-  
-  .triger-location-btn::after, .triger-location-btn::before{
-    content: " ";
-    display: block;
-    position: absolute;
+  .maps-left-side {
     width: 100%;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    background: #31572c;
-    z-index: -1;
+    height: 100%;
+    position: relative;
+    border-radius: 2em;
+    padding: 2rem;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    margin: auto 0;
   }
-  
-  .triger-location-btn::before {
-    transform: translateX(-100%);
-    z-index: 1;
+}
+
+@media (width > 1400px) {
+  .location-title {
+    font-size: 1.4vw;
   }
-  
-  .triger-location-btn:hover:before {
-    transform: translateX(0);
-    transition: transform 350ms ease;
+  h6 {
+    font-size: clamp(1.4rem, 0.85vw, 0.85vw);
   }
-  
- .triger-location-btn::after {
-     z-index: 0;
-    transform: translateX(100%);
-    transition: none;
-    transition: transform 350ms ease;
+  .spinning-globe {
+    width: 19rem;
+    height: 6vh;
   }
-  
-  .triger-location-btn:hover:after {
-    opacity: 1;
-    transform: translateX(0);
-   transition: transform 350ms 360ms ease;
+  .spinning-globe p {
+    font-size: 1.2vw;
   }
+  .decorbox {
+    font-size: 1.5vw;
+    max-height: unset;
+  }
+  .location-section {
+    max-height: unset;
+  }
+}
